--- a/public/media/css/style.css
+++ b/public/media/css/style.css
@@ -716,7 +716,7 @@ ul.clock li {
 /* styles for More */
 .modal-window{
 	position: fixed;
-	top:150px;
+	top:250px;
 	left:50%;
 	width: 400px;
 	margin-left: -200px;
@@ -725,4 +725,15 @@ ul.clock li {
 	background-color: #fff;
 	z-index: 99;
 	border-radius: 5px;
+	color: black;
+	font-size: 10px;
+}
+#jquery-overlay{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: 0.7;
 }
